[package]
name = "der-repro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"], default-features = false }
wasm-bindgen = { version = "0.2.73", features = ["serde-serialize"], default-features = false }
rand_core = { version = "0.6.3", features = ["std"], default-features = false }
der = { version = "0.4.4", features = ["bigint"], default-features = false }
